# LS-Addons-Manager

./: .gitignore  .gitmodules  DISCLAIMER.md  README.md
LosslessProxy/: CMakeLists.txt  build.bat
LosslessProxy/src/: addon_api.hpp  addon_manager.cpp  addon_manager.hpp  dx11_hook.cpp  dx11_hook.hpp  gui_manager.cpp  gui_manager.hpp  iat_patcher.hpp  main.cpp  shader_hook.cpp  shader_hook.hpp
LosslessProxy/src/include/: addon_api.hpp
